--- a/game.html
+++ b/game.html
@@ -2,9 +2,9 @@
 <html>
 
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script type="text/javascript" src="index_script.js" ></script>
+      <script type="text/javascript" src="game.js" ></script>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/index-style.css" />
+    <link rel="stylesheet" type="text/css" href="game.css" />
   </head>
 
   <body>
