--- a/game.html
+++ b/game.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-
-      <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script type="text/javascript" src="game.js" ></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="game.js" ></script>
   <head>
     <link rel="stylesheet" type="text/css" href="game.css" />
   </head>
 
   <body>
+    <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
     <h2>
-      TYPING GAME
+      TYPING GAME NAME
     </h2>
     <!-- <br />
     <br />
     <div id= "testbox">
       Something?
     </div> -->
-    <canvas id="canvas">
+    <!-- <canvas id="canvas">
 
-    </canvas>
+    </canvas> -->
 
 
   </body>
