--- a/game.html
+++ b/game.html
@@ -11,6 +11,23 @@
     <h2>
       TYPING GAME NAME
     </h2>
+
+    <a href="http://padedeji.github.io/">
+      <div id="aboutPaul">
+        P
+      </div>
+    </a>
+
+    <a href="http://evajiang322.github.io/">
+      <div id="aboutEva">
+        E
+      </div>
+    </a>
+    <a href="http://nginzburg.github.io/">
+      <div id="aboutNicole">
+        N
+      </div>
+    </a>
     <!-- <br />
     <br />
     <div id= "testbox">
