--- a/index.html
+++ b/index.html
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="game.js" ></script>
   <head>
-    <link rel="stylesheet" type="text/css" href="game.css" />
+    <link rel="stylesheet" type="text/css" href="index-style.css" />
   </head>
 
   <body>
+    <a href="index.html">
     <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
     <h2>
       TYPING GAME NAME
     </h2>
+    </a>
 
     <a href="http://padedeji.github.io/">
-      <div id="aboutPaul">
+      <div class = "abouts" id="aboutPaul">
         P
       </div>
     </a>
 
     <a href="http://evajiang322.github.io/">
-      <div id="aboutEva">
+      <div class = "abouts" id="aboutEva">
         E
       </div>
     </a>
     <a href="http://nginzburg.github.io/">
-      <div id="aboutNicole">
+      <div class = "abouts" id="aboutNicole">
         N
       </div>
     </a>
-    <!-- <br />
-    <br />
-    <div id= "testbox">
-      Something?
-    </div> -->
-    <!-- <canvas id="canvas">
 
-    </canvas> -->
+    <div id="gameRules">
+      <p>
+
+        GAME RULES:
+      <ol>
+        <li>Press Start to play</li>
+        <li>When bubbles with letters pop up, press the key that corresponds to bubble to remove it.</li>
+        <li>Aim for the high score</li>
+        <li>Have fun!</li>
+      </ol>
+      </p>
+    </div>
+
+    <div class="sidetabs" id="rules">
+        Rules
+      </div>
+    <div class="sidetabs" id="scoreboard">
+      Scoreboard
+    </div>
+
+    <div class="sidetabs" id="goToGame">
+      Go To Game
+    </div>
 
 
   </body>
