--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript" src="index-script.js" ></script>
     <link rel="stylesheet" type="text/css" href="index-style.css" />
   </head>
 
@@ -8,7 +10,7 @@
     <a href="index.html">
     <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
     <h2>
-      TYPING GAME NAME
+      TYPING GAME NAME <br />
     </h2>
     </a>
 
@@ -32,7 +34,7 @@
     <div id="gameRules">
       <p>
 
-        GAME RULES:
+        <h3>GAME RULES:</h3>
       <ol>
         <li>Press Start to play</li>
         <li>When bubbles with letters pop up, press the key that corresponds to bubble to remove it.</li>
@@ -42,16 +44,41 @@
       </p>
     </div>
 
+    <div id="aboutGame">
+      <p>
+        <h3>ABOUT THE GAME</h3>
+        Welcome to the page that will forever change the way you type. This website has a game
+         (which you should totally check out, by the way) which is pretty cool and was actually
+         made in about 4 or 5 days. (Amazing, isn't it?) To play the game, you'll have to click
+         the tab on the side that says "Go To Game". But first, here's an intro to the game. The
+         game is a for those who want to improve their typing skills. It will feature bubbles
+         that pop up on the screen that contain letters. You'll have to type that letter (or
+         set of letters) to get a score. You get points for correct answers and deductions for
+         incorrect typing. The best part about this is that you won't be able to look at your
+         keyboard to have a high score. (Sorry, but that's the way you properly code.) After x
+         amount of seconds, the game will end and your score will be totaled. High scores will
+         be featured on the scoreboard.
+      </p>
+    </div>
+
+
+
     <div class="sidetabs" id="rules">
         Rules
       </div>
+
+    <a href="game.html">
+      <div class="sidetabs" id="goToGame">
+        Go To Game
+      </div>
+    </a>
+
+    <a href="scoreboard.html">
     <div class="sidetabs" id="scoreboard">
       Scoreboard
     </div>
+    </a>
 
-    <div class="sidetabs" id="goToGame">
-      Go To Game
-    </div>
 
 
   </body>
