finished game css

--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <br />
     <h2>
       TYPING GAME NAME
     </h2>
@@ -13,6 +14,24 @@
 
     </canvas>
 
+    <div id="currentScore">
+      <h3>Score</h3>
+      <p id="score_val">00000</p>
+      <br />
+    </div>
+
+
+    <div id="pauseResumeGame">
+      <p id="pauseResume">Pause</p>
+    </div>
+
+
+
+    <div id="goHome">
+        <a href="index.html">
+      <h4>Return to Main Page</h4>
+    </a>
+    </div>
 
   </body>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
