made circles clearer

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
       TYPING GAME NAME
     </h2>
     <br />
-    <canvas id="canvas">
+    <canvas id="canvas" height="500" width="800">
 
     </canvas>
 
