fixed some typos/cleaned up syntax + added continuous circle generatinggit add .

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          (which you should totally check out, by the way) which is pretty cool and was actually
          made in about 4 or 5 days. (Amazing, isn't it?) To play the game, you'll have to click
          the tab on the side that says "Go To Game". But first, here's an intro to the game. The
-         game is a for those who want to improve their typing skills. It will feature bubbles
+         game is for those who want to improve their typing skills. It will feature bubbles
          that pop up on the screen that contain letters. You'll have to type that letter (or
          set of letters) to get a score. You get points for correct answers and deductions for
          incorrect typing. The best part about this is that you won't be able to look at your
