--- a/game.html
+++ b/game.html
@@ -5,14 +5,19 @@
   </head>
 
   <body>
+
     <br />
     <h2>
       TYPING GAME NAME
     </h2>
     <br />
+
+    <img id = "startButtonPic" src = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/03/Space-Invaders.jpg" />
+
     <canvas id="canvas" height="500" width="800">
 
     </canvas>
+
 
     <div id="currentScore">
       <h3>Score</h3>
@@ -32,6 +37,9 @@
       <h4>Return to Main Page</h4>
     </a>
     </div>
+
+
+
 
   </body>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
