--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 
     <div id="currentScore">
       <h3>Score</h3>
-      <p id="score_val">00000</p>
+      <p id="score_val"></p>
       <br />
     </div>
 
