--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          that pop up on the screen that contain letters. You'll have to type that letter (or
          set of letters) to get a score. You get points for correct answers and deductions for
          incorrect typing. The best part about this is that you won't be able to look at your
-         keyboard to have a high score. (Sorry, but that's the way you properly code.) After x
+         keyboard to have a high score. (Sorry, but that's the way you properly type.) After x
          amount of seconds, the game will end and your score will be totaled. High scores will
          be featured on the scoreboard.
       </p>
