--- a/game.html
+++ b/game.html
@@ -8,11 +8,12 @@
 
     <br />
     <h2>
-      TYPING GAME NAME
+      LETTER GETTER GAME
     </h2>
     <br />
 
     <img id = "startButtonPic" src = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/03/Space-Invaders.jpg" />
+    <img id = "paused" src="http://www.cs.duke.edu/courses/fall10/cps108/code/src/vooga/games/towerdefense/resources/images/pauseScreen.gif" />
 
     <canvas id="canvas" height="500" width="800">
 
