--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="index.html">
     <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
     <h2>
-      TYPING GAME NAME <br />
+      LETTER GETTER GAME <br />
     </h2>
     </a>
 
