--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
 
     <img id = "startButtonPic" src = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/03/Space-Invaders.jpg" />
     <img id = "paused" src="http://www.cs.duke.edu/courses/fall10/cps108/code/src/vooga/games/towerdefense/resources/images/pauseScreen.gif" />
+    <img id = "gameOverPic" src="http://i.ytimg.com/vi/vJaAy3jmEx8/maxresdefault.jpg" />
 
     <canvas id="canvas" height="500" width="800">
 
