--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="game.css" />
+    <link rel="stylesheet" type="text/css" href="game.css">
   </head>
 
   <body>
@@ -30,6 +30,9 @@
       <p id="pauseResume">Pause</p>
     </div>
 
+
+    <!-- <div id="countdown" class="timer">
+    </div> -->
 
 
     <div id="goHome">
