--- a/game.html
+++ b/game.html
@@ -30,11 +30,11 @@
 
     <div id="pauseResumeGame">
       <p id="pauseResume">Pause</p>
+      <div id="countdown" class="timer">
+      1:00</div>
     </div>
 
 
-    <!-- <div id="countdown" class="timer">
-    </div> -->
 
 
     <div id="goHome">
