--- a/game.html
+++ b/game.html
@@ -33,8 +33,8 @@
     </div>
 
 
-    <!-- <div id="countdown" class="timer">
-    </div> -->
+    <div id="countdown" class="timer">
+    </div>
 
 
     <div id="goHome">
