adjust directory for home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <a href="index.html">
+    <a href="/">
     <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
     <h2>
       LETTER GETTER GAME <br />
