--- a/game.html
+++ b/game.html
@@ -42,7 +42,7 @@
     </div>
 
     <div id="submitScoreBtn">
-        <a href="/scoreboard">
+        <a href="scoreboard.html">
       <h4>Submit Score</h4>
     </a>
     </div>
