--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         Rules
       </div>
 
-    <a href="game.html">
+    <a href="/game">
       <div class="sidetabs" id="goToGame">
         Go To Game
       </div>
