update scoreboard css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <a href="/">
     <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
-    <h2>
-      LETTER GETTER GAME <br />
+    <h2>LETTER GETTER GAME <br />
     </h2>
     </a>
 
