fixed python scoreboard issue

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </a>
 
-    <a href="scoreboard.html">
+    <a href="/scoreboard">
     <div class="sidetabs" id="scoreboard">
       Scoreboard
     </div>
