--- a/game.html
+++ b/game.html
@@ -36,19 +36,19 @@
 
 
     <div id="goHome">
-        <a href="index.html">
+        <a href="/">
       <h4>Return to Main Page</h4>
     </a>
     </div>
 
     <div id="submitScoreBtn">
-        <a href="scoreboard.html">
+        <a href="/scoreboard">
       <h4>Submit Score</h4>
     </a>
     </div>
 
     <div id="restartGame">
-        <a href="game.html">
+        <a href="/game">
       <h4>Restart Game</h4>
     </a>
     </div>
