--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="scoreboard-style.css" />
   </head>
   <body>
-    <form action="/scoreboard.html" method="post">
+    <form action="/scoreboard" method="post">
       <div>Name: <input name="name"></input></div>
       <div><input type="submit" value="Add User"></div>
     </form>
@@ -30,4 +30,4 @@
 
   </body>
 </html>
-{% end autoescape %}
+{% endautoescape %}
