--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,7 +13,7 @@
     <TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
     <h2>Scores</h2>
     <tr>
-    <td id="">  {% for user in users %}
+    <td id="">  {% for user in users:%}
       <ul id = "placedUserName">{{ user.name }}
       </ul>
     {% endfor %}
