fixed typing/score issue after game over

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="scoreboard-style.css" />
   </head>
   <body>
-    <!-- <form action="/scoreboard" method="post">
+    <form action="/scoreboard" method="post">
       <div>Name: <input name="name"></input></div>
       <div><input type="submit" value="Add User"></div>
-    </form> -->
+    </form>
     <hr />
     <TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
     <h2>Scores</h2>
