--- a/game.html
+++ b/game.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% autoescape true %}
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="game.css">
@@ -61,3 +62,4 @@
   <script type="text/javascript" src="game.js" ></script>
 
 </html>
+{% endautoescape %}
