added times up mp3

--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,10 +5,24 @@
     <link rel="stylesheet" type="text/css" href="scoreboard-style.css" />
   </head>
   <body>
-    <!-- <form action="/scoreboard" method="post">
+
+      <a href="/game">
+        <div class="sidetabs" id="goToGame">
+          Go To Game
+        </div>
+      </a>
+
+      <a href="/">
+      <div class="sidetabs" id="goHomeDiv">
+        Go Home
+      </div>
+      </a>
+
+
+   <form action="/scoreboard" method="post">
       <div>Name: <input name="name"></input></div>
       <div><input type="submit" value="Add User"></div>
-    </form> -->
+    </form>
     <hr />
     <TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
     <h2>Scores</h2>
@@ -25,7 +39,9 @@
       </td>
   </TD>
     </TR>
-    </TABLE>
+  </TABLE>
+
+
 
   </body>
 </html>
