added buttons to select which game version (css)

--- a/game.html
+++ b/game.html
@@ -57,6 +57,15 @@
 <audio src='http://soundbible.com/grab.php?id=2067&type=mp3' id="popSound" display="none"></audio>
 <audio src='http://soundbible.com/grab.php?id=787&type=mp3' id="timesUpMp3" display="none"></audio>
 
+  <h2 id="selectVersionPrompt">Which version would you like to play?</h2>
+  <div id="staticButton">
+    Normal
+  </div>
+
+  <div id="fallingButton">
+    Falling
+  </div>
+
 
   </body>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
