--- a/game.html
+++ b/game.html
@@ -16,6 +16,8 @@
     <img id = "startButtonPic" src = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/03/Space-Invaders.jpg" />
     <img id = "paused" src="http://www.cs.duke.edu/courses/fall10/cps108/code/src/vooga/games/towerdefense/resources/images/pauseScreen.gif" />
     <img id = "gameOverPic" src="http://i.ytimg.com/vi/vJaAy3jmEx8/maxresdefault.jpg" />
+    <!-- Picture changes when sound changes -->
+    <img id = "sound" src = "https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/volume_down.png" />
 
     <canvas id="canvas" height="500" width="800">
 
