moved timer in game.html

--- a/game.html
+++ b/game.html
@@ -33,10 +33,11 @@
 
     <div id="pauseResumeGame">
       <p id="pauseResume">Pause</p>
-      <div id="countdown" class="timer">
-      ~Timer~</div>
+
     </div>
 
+    <div id="countdown" class="timer">
+    Timer</div>
 
     <div id="goHome">
         <a href="/">
