--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script type="text/javascript" src="index-script.js" ></script>
-    <link rel="stylesheet" type="text/css" href="index-style.css" />
+  <link rel="stylesheet" type="text/css" href="index-style.css" />
+  <title>P.E.N. Pals || Letter Getter Game</title>
   </head>
 
   <body>
