--- a/scoreboard.html
+++ b/scoreboard.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="scoreboard-style.css" />
+    <title>Scoreboard</title>
   </head>
   <body>
 
