update main page and click start img

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <body>
     <a href="/">
-    <img id = "cloudPic" src = "http://images.clipartpanda.com/white-clouds-png-white_cloud.png" />
-    <h2>LETTER GETTER<br />
-    </h2>
+    <h2>LETTER<br />GETTER</h2>
     </a>
 
     <a href="http://padedeji.github.io/">
@@ -36,9 +34,13 @@
 
         <h3>GAME RULES:</h3>
       <ol>
-        <li>Press Start to play</li>
-        <li>When bubbles with letters pop up, press the key that corresponds to bubble to remove it.</li>
-        <li>Aim for the high score</li>
+        <li>Click "Click Start" to play</li>
+        <li>Select which version you would like to play.
+          (Normal has static bubbles. Falling has bubbles that fall down.)</li>
+        <li>When bubbles pop up, press the keys on your keyboard that correspond to letter in each bubble to remove that bubble.</li>
+        <li>(Normal) An incorrect key press will deduct 200 points from your score.
+          (Falling) An incorrect key press or skipping a bubble will result in a deduction of 50 points.</li>
+        <li>Aim for the high score! Compete with people around the world.</li>
         <li>Have fun!</li>
       </ol>
       </p>
@@ -59,9 +61,15 @@
          amount of seconds, the game will end and your score will be totaled. High scores will
          be featured on the scoreboard.
       </p>
+
     </div>
 
+    <div id = "aboutBG">
+    </div>
 
+    <div class="sidetabs" id="aboutTheGame">
+        About Game
+      </div>
 
     <div class="sidetabs" id="rules">
         Rules
