--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
     </h2>
     <br />
 
-    <img id = "startButtonPic" src = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/03/Space-Invaders.jpg" />
+    <img id = "startButtonPic" src = "https://lh3.googleusercontent.com/QavE2flymvuWv_bHHCI-OisLi8sW5NDZqmPcYIL1qFY=w610-h350-no" />
     <img id = "paused" src="http://www.cs.duke.edu/courses/fall10/cps108/code/src/vooga/games/towerdefense/resources/images/pauseScreen.gif" />
     <img id = "gameOverPic" src="http://i.ytimg.com/vi/vJaAy3jmEx8/maxresdefault.jpg" />
     <!-- Picture changes when sound changes -->
