--- a/game.html
+++ b/game.html
@@ -40,26 +40,29 @@
     <div id="countdown" class="timer">
     Timer</div>
 
+    <a href="/">
     <div id="goHome">
-        <a href="/">
       <h4>Return to Main Page</h4>
-    </a>
     </div>
+  </a>
 
+    <a href="/scoreboard">
     <div id="submitScoreBtn">
-        <a href="/scoreboard">
-      <h4>Submit Score</h4>
-    </a>
-    </div>
 
-    <div id="restartGame">
-        <a href="/game">
-      <h4>Restart Game</h4>
-    </a>
+      <h4>Submit Score</h4>
     </div>
+  </a>
+
+    <a href="/game">
+    <div id="restartGame">
+
+      <h4>Restart Game</h4>
+    </div>
+  </a>
 
 <audio src='http://soundbible.com/grab.php?id=2067&type=mp3' id="popSound" display="none"></audio>
 <audio src='http://soundbible.com/grab.php?id=787&type=mp3' id="timesUpMp3" display="none"></audio>
+<audio src='http://soundbible.com/grab.php?id=1669&type=mp3' id="TenSecBeep" display="none"></audio>
 
   <h2 id="selectVersionPrompt">Which version would you like to play?</h2>
   <div id="staticButton">
