--- a/scoreboard.html
+++ b/scoreboard.html
@@ -22,6 +22,7 @@
     <form action="/scoreboard" method="post">
       <div>Name: <input name="name"></input></div>
       <div><input type="submit" value="Add User"></div>
+      <div><input type = "hidden" name="user_score"></div>
     </form>
     <hr />
     <TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
