fixed stuff and added more options

--- a/game.html
+++ b/game.html
@@ -70,6 +70,10 @@
     Falling
   </div>
 
+  <h2 id="selectDifficulty">Select difficulty</h2>
+  <div id ="letters">Letters</div>
+  <div id ="words">Words</div>
+
 
   </body>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
