--- a/game.html
+++ b/game.html
@@ -63,6 +63,7 @@
 <audio src='http://soundbible.com/grab.php?id=2067&type=mp3' id="popSound" display="none"></audio>
 <audio src='http://soundbible.com/grab.php?id=787&type=mp3' id="timesUpMp3" display="none"></audio>
 <audio src='http://soundbible.com/grab.php?id=1669&type=mp3' id="TenSecBeep" display="none"></audio>
+<audio src='http://soundbible.com/grab.php?id=1642&type=mp3' id="wrongMp3" display="none"></audio>
 
   <h2 id="selectVersionPrompt">Which version would you like to play?</h2>
   <div id="staticButton">
