--- a/game.html
+++ b/game.html
@@ -46,16 +46,21 @@
     </div>
   </a>
 
-    <a href="/scoreboard">
+
+
+
     <div id="submitScoreBtn">
-      <form action="/scoreboard" method="post">
-        <div>Name: <input name="name"></input></div>
-        <div><input type="submit" value="Add User"></div>
-        <div><input id = "score" type = "hidden" name="user_score"></div>
-      </form>
+      <!-- <a href="/scoreboard">
       <h4>Submit Score</h4>
+      </a> -->
+      <form action="/scoreboard" method="post">
+        <div class="forms">Name</div><input name="name" style="display:block"></input>
+        <br />
+        <div><input id="submitBtn" type="submit" style="display:none" value="Submit"></input></div>
+        <div><input id = "score" type = "hidden" name="user_score"></input></div>
+      </form>
     </div>
-  </a>
+
 
     <a href="/game">
     <div id="restartGame">
