--- a/scoreboard.html
+++ b/scoreboard.html
@@ -16,21 +16,19 @@
       <div class="sidetabs" id="goHomeDiv">
         Go Home
       </div>
-      </a>
-    <hr />
+    </a>
     <TABLE BORDER="3" CELLSPACING="1" CELLPADDING="1">
     <h2>Scores</h2>
     <tr>
-    <td>  {% for user in users %}
-      <ul id = "placedUserName"> {{ user.name }}
+    <td id="usernames">  {% for user in users %}
+      <ul id = "placedUserName">{{ user.name }}
       </ul>
     {% endfor %}
   </TD>
-    <td> {% for user in users %}
+    <td id="scores"> {% for user in users %}
       <ul> {{user.score}}
       </ul>
       {% endfor %}
-  </form>
       </td>
   </TD>
     </TR>
