--- a/scoreboard.html
+++ b/scoreboard.html
@@ -26,7 +26,7 @@
     {% endfor %}
   </TD>
     <td id="scores"> {% for user in users %}
-      <ul> {{user.score}}
+      <ul id="placedScores"> {{user.score}}
       </ul>
       {% endfor %}
       </td>
