click body to get to game

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>P.E.N. Pals || Letter Getter Game</title>
   </head>
 
-  <body>
+  <body id = "sup">
     <a href="/">
     <h2>LETTER<br />GETTER</h2>
     </a>
