--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <li>Click "Click Start" to play</li>
         <li>Select which version you would like to play.
           (Normal has static bubbles. Falling has bubbles that fall down.)</li>
-        <li>When bubbles pop up, press the keys on your keyboard that correspond to letter in each bubble to remove that bubble.</li>
+        <li>When bubbles pop up, press the keys on your keyboard that correspond
+          to letter in each bubble to remove that bubble and to earn 100 points.</li>
         <li>(Normal) An incorrect key press will deduct 200 points from your score.
           (Falling) An incorrect key press or skipping a bubble will result in a deduction of 50 points.</li>
         <li>Aim for the high score! Compete with people around the world.</li>
