--- a/game.html
+++ b/game.html
@@ -87,6 +87,10 @@
   <div id ="letters">Letters</div>
   <div id ="words">Words</div>
 
+  <div id = "typing">
+    <h2 id="type_val"></h2>
+  </div>
+
 
   </body>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
