--- a/aboutus.html
+++ b/aboutus.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html>
-<h2>About All Of Us
-<p>
-Paul
-  <img src = ''>
+<head>
+<link rel="stylesheet" type="text/css" href="aboutus-style.css" />
+</head>
 
-</p>
+<body>
+<h2>About All Of Us</h2>
+    <div id="paul">
+    <br />
+    <img id="PaulPic" src = 'https://scontent.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/11218065_907645522614655_3366933619479354190_n.jpg?oh=a0d38cadfaee377cdb43ee8fd1805cea&oe=5647D297' />
+    <div id ="aboutPaul">
+      Name: Paul Adedeji<br />
+      College: New Jersey Institute of Technology (NJIT)<br />
+      Fun Fact: "This is my first major coding project."
+    </div>
+    </div>
+    <div id="eva">
+    <br />
+    <img id="EvaPic" src = 'https://scontent.xx.fbcdn.net/hphotos-xfa1/t31.0-8/11402773_713898495388371_85801793679643994_o.jpg' />
+    <div id ="aboutEva">
+      Name: Eva Jiang<br />
+      College: Rensselaer Polytechnic Institute (RPI)<br />
+      Fun Fact: "I have double jointed fingers."
+    </div>
+    </div>
+    <div id="nicole">
+    <br />
+    <img id="NicolePic" src = 'https://scontent.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/11412386_985363724827735_1913351690108236429_n.jpg?oh=4dba44e5db4fa28193bb36e350b14eec&oe=5680CD08' />
+    <div id ="aboutNicole">
+      Name: Nicole Ginzburg<br />
+      College: SUNY Stony Brook University (SBU)<br />
+      Fun Fact: "I was born with blonde hair, but I am a brunette."
+    </div>
+    </div>
 
+    <a href="/">
+      <div class="sidetabs" id="goHome">
+        Home
+      </div>
+    </a>
 
-
-
-
-
+</body>
 </html>
