--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <li>Select which version you would like to play.
           (Normal has static bubbles. Falling has bubbles that fall down.)</li>
         <li>When bubbles pop up, press the keys on your keyboard that correspond
-          to letter in each bubble to remove that bubble and to earn 100 points.</li>
+          to the letter or word in each bubble to remove that bubble and to earn 100 points.
+        (If you are playing the word versions, type in the word then press the spacebar to clear it.
+        If the bubble is still on the page, then press space and retype the word.)</li>
         <li>(Normal) An incorrect key press will deduct 200 points from your score.
           (Falling) An incorrect key press or skipping a bubble will result in a deduction of 50 points.</li>
         <li>Aim for the high score! Compete with people around the world.</li>
@@ -87,6 +89,13 @@
       Scoreboard
     </div>
     </a>
+
+    <a href="/aboutus">
+      <div class="sidetabs" id="aboutus">
+      About Us
+      </div>
+    </a>
+
 
 
 
