--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           (Normal has static bubbles. Falling has bubbles that fall down.)</li>
         <li>When bubbles pop up, press the keys on your keyboard that correspond
           to the letter or word in each bubble to remove that bubble and to earn 100 points.
-        (If you are playing the word versions, type in the word then press the spacebar to clear it.
-        If the bubble is still on the page, then press space and retype the word.)</li>
+        (If you are playing the word versions, type in the word then press the spacebar or enter to clear it.
+        If the bubble is still on the page, then press space or enter and retype the word.)</li>
         <li>(Normal) An incorrect key press will deduct 200 points from your score.
           (Falling) An incorrect key press or skipping a bubble will result in a deduction of 50 points.</li>
         <li>Aim for the high score! Compete with people around the world.</li>
